# vibestudio

./: .gitignore  Cargo.toml  DEVELOPMENT_PLAN.md  Dioxus.toml  README.md  backup_log.txt  build.bat  build_error.txt  build_log.txt  build_log_2.txt  build_log_3.txt  build_out.txt  build_out_2.txt  build_out_3.txt  build_out_4.txt  build_output.txt  cargo_direct_3.txt  cargo_direct_4.txt  cargo_err.txt  check_errors.txt  check_errors_2.txt  check_errors_2_utf8.txt  check_errors_3.txt  check_errors_3_utf8.txt  check_errors_4.txt  check_errors_4_utf8.txt  check_errors_5.txt  check_errors_5_utf8.txt  check_errors_6.txt  check_errors_6_utf8.txt  check_errors_final.txt  check_errors_final_utf8.txt  check_errors_utf8.txt  dom_dump.html  error_log.txt  index.html  index_dump.html  reflog.txt
.github/workflows/: deploy.yml  pages.yml
assets/: style.css  vibe-studio-dxhe8c51ee6645b8e1.js  vibe-studio_bg-dxhfc7b451256649b6f.wasm
src/: audio.rs  inspector.rs  main.rs  model.rs  sidebar.rs  timeline.rs
