[package]
name = "vibe-studio"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.7.3", features = ["web"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-sys = { version = "0.3", features = [
    "AudioContext",
    "AnalyserNode",
    "GainNode",
    "AudioParam",
    "MediaElementAudioSourceNode",
    "AudioDestinationNode",
    "HtmlAudioElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Blob",
    "Url",
    "File",
    "FileList",
    "FileReader",
    "HtmlInputElement",
    "DragEvent",
    "DataTransfer",
    "PointerEvent",
    "MouseEvent",
    "Window",
    "Document",
    "Element",
    "DomRect",
    "Performance",
] }
wasm-bindgen = "0.2"
js-sys = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
